# kampvisum-backend

./: .env.development  .gitignore  justfile  pyproject.toml  requirements.txt
docs/: changes.rst
etc/: requirements.txt
scouts_kampvisum_api/apps/: __init__.py
scouts_kampvisum_api/apps/camps/: __init__.py  apps.py  urls.py
scouts_kampvisum_api/apps/camps/filters/: __init__.py  camp_filter.py
scouts_kampvisum_api/apps/camps/fixtures/: __init__.py  camp_years.json
scouts_kampvisum_api/apps/camps/management/: __init__.py
scouts_kampvisum_api/apps/camps/managers/: __init__.py  camp_manager.py  camp_type_manager.py  camp_year_manager.py
scouts_kampvisum_api/apps/camps/migrations/: 0001_initial.py  __init__.py
scouts_kampvisum_api/apps/camps/models/: __init__.py  camp.py  camp_type.py  camp_year.py
scouts_kampvisum_api/apps/camps/serializers/: __init__.py  camp_minimal_serializer.py  camp_serializer.py  camp_type_serializer.py  camp_year_serializer.py
scouts_kampvisum_api/apps/camps/services/: __init__.py  camp_service.py  camp_type_service.py  camp_year_service.py
scouts_kampvisum_api/apps/camps/views/: __init__.py  camp_type_views.py  camp_views.py  camp_year_views.py
scouts_kampvisum_api/apps/deadlines/: __init__.py  apps.py  urls.py
scouts_kampvisum_api/apps/deadlines/fixtures/: camp_registration_deadlines.json
scouts_kampvisum_api/apps/deadlines/managers/: __init__.py  deadline_date_manager.py  deadline_flag_manager.py  deadline_item_manager.py  deadline_manager.py  linked_deadline_flag_manager.py  linked_deadline_manager.py
scouts_kampvisum_api/apps/deadlines/migrations/: 0001_initial.py  __init__.py
scouts_kampvisum_api/apps/deadlines/models/: __init__.py  deadline.py  deadline_date.py  deadline_flag.py  deadline_item.py  linked_deadline.py  linked_deadline_flag.py  linked_deadline_item.py
scouts_kampvisum_api/apps/deadlines/serializers/: __init__.py  deadline_date_serializer.py  deadline_flag_serializer.py  deadline_item_serializer.py  deadline_serializer.py  linked_deadline_flag_serializer.py  linked_deadline_item_serializer.py  linked_deadline_serializer.py  visum_deadline_serializer.py
scouts_kampvisum_api/apps/deadlines/services/: __init__.py  deadline_flag_service.py  deadline_item_service.py  deadline_service.py  linked_deadline_flag_service.py  linked_deadline_item_service.py  linked_deadline_service.py
scouts_kampvisum_api/apps/deadlines/views/: __init__.py  deadline_views.py
scouts_kampvisum_api/apps/groups/: __init__.py  apps.py  urls.py
scouts_kampvisum_api/apps/groups/filters/: scouts_group_filter.py
scouts_kampvisum_api/apps/groups/managers/: __init__.py  default_scouts_section_name_manager.py  scouts_group_type_manager.py  scouts_section_manager.py
scouts_kampvisum_api/apps/groups/migrations/: 0001_initial.py
scouts_kampvisum_api/apps/locations/: __init__.py  apps.py  urls.py
scouts_kampvisum_api/apps/participants/: __init__.py  apps.py  urls.py
scouts_kampvisum_api/apps/setup/: __init__.py  apps.py  models.py  urls.py  views.py
scouts_kampvisum_api/apps/utils/: __init__.py  apps.py
scouts_kampvisum_api/apps/visums/: __init__.py  apps.py  urls.py
scouts_kampvisum_api/initial_data/: __init__.py
scouts_kampvisum_api/scouts_auth/: __init__.py  apps.py  urls.py
scouts_kampvisum_api/scouts_auth/auth/: __init__.py  oidc_auth.py  urls.py
scouts_kampvisum_api/scouts_auth/groupadmin/: __init__.py  urls.py
scouts_kampvisum_api/scouts_auth/inuits/: urls.py
scouts_kampvisum_api/scouts_auth/management/: __init__.py
scouts_kampvisum_api/scouts_auth/migrations/: 0001_initial.py  0002_alter_scoutsusersession_username.py  0003_persistedfile_directory_path.py  0004_remove_persistedfile_directory_path.py
scouts_kampvisum_api/scouts_auth/scouts/: __init__.py
scouts_kampvisum_api/scouts_kampvisum_api/: __init__.py  admin.py  asgi.py  pagination.py  settings.py  urls.py  wsgi.py
scripts/: poetry_install.sh
(+332 files in other folders)
