[build-system]
requires = ["poetry-core=1.4.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "scouts-kampvisum-api"
version = "1.0"
description = "Provides functionality for setting up a scouts kamp visum"
authors = ["inuits <info@inuits.eu>"]
license = "GPL v2.0"

[tool.poetry.dependencies]
python = "^3.9.2"
boto3 = "1.34.39"
cffi = "1.16.0"
Django = "4.1.13"
django-anymail = {extras = ["sendinblue"], version = "10.2"}
django-cors-headers = "4.3.1"
django-cprofile-middleware = "1.0.5"
django-filter = "23.5"
django-rest-enumfield = "0.2.0"
django-safedelete = "1.3.3"
django-sql-middleware = "0.0.7"
django-storages = "1.14.2"
# Django-rest 3.14 breaks swagger, see: https://github.com/axnsan12/drf-yasg/issues/810
# djangorestframework = "3.14.0"
djangorestframework = "3.14.0"
mozilla-django-oidc = "4.0.0"
drf-yasg2 = "1.19.4"
environs = "10.3.0"
future = "0.18.3"
pdfrw = "0.4"
psycopg2-binary = "2.9.9"
pyjwt = "2.8.0"
PyYAML = "6.0.1"
urllib3= "1.26.18"

[tool.poetry.dev-dependencies]